[package]
name = "energy-backend-rust"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
ctrlc = "3.5.1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
ssh2 = "0.9.5"
actix-web = "4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3